# logos-sql-zone

./: .env.example-local  .gitmodules  Cargo.toml  README.md  run-local.sh
common/: Cargo.toml
common/src/: config.rs  crypto.rs  error.rs  lib.rs  logging.rs  screen.rs  state.rs
indexer/: Cargo.toml
indexer/src/: db.rs  indexer.rs  lib.rs  main.rs  tui.rs
sequencer/: Cargo.toml
sequencer/src/: .steelsaferc  db.rs  lib.rs  main.rs  sequencer.rs  tui.rs
