[package]
categories  = { workspace = true }
description = "Sqlite zone indexer"
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "demo-sqlite-indexer"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
arboard = "3.4.1"
chrono = { features = ["serde"], version = "0.4" }
clap = { features = ["derive", "env", "std"], version = "4" }
demo-sqlite-common = { workspace = true }
futures = { default-features = false, version = "0.3" }
hex = "0.4"
lb-common-http-client = { workspace = true }
lb-core = { workspace = true }
logos-blockchain-zone-sdk = { path = "../logos-blockchain/zone-sdk" }
nanosql = { features = ["chrono"], version = "0.10.0" }
rusqlite = { features = ["bundled"], version = "0.33" }
ratatui = { features = ["serde"], version = "0.29" }
reqwest = { features = ["json", "rustls-tls"], workspace = true }
tokio = { default-features = false, features = [
  "io-std",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
], version = "1" }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
tui-textarea = "0.7"
zeroize = { features = ["alloc"], workspace = true }
