[package]
categories  = { workspace = true }
description = "Sqlite sequencer"
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "demo-sqlite-sequencer"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
arboard = "3.4.1"
chrono = { features = ["serde"], version = "0.4" }
clap = { features = ["derive", "env", "std"], version = "4" }
demo-sqlite-common = { workspace = true }
fs2 = "0.4"
hex = "0.4"
lb-common-http-client = { workspace = true }
lb-core = { workspace = true }
lb-key-management-system-service = { workspace = true }
logos-blockchain-zone-sdk = { path = "../logos-blockchain/zone-sdk" }
nanosql = { features = ["chrono"], version = "0.10.0" }
rand = { version = "0.9" }
ratatui = { features = ["serde"], version = "0.29" }
reqwest = { features = ["json", "rustls-tls"], workspace = true }
rusqlite = { features = ["bundled", "trace"], version = "0.33.0" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { default-features = false, features = [
  "io-std",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
], version = "1" }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
tui-textarea = "0.7"
zeroize = { features = ["alloc"], workspace = true }
